<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent">

        <!-- occupation -->
        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/op"
            android:textSize="25sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="@+id/et_occupation"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_occupation"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />


        <!-- professional interests -->
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/pi"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/et_professional_interests"
            app:layout_constraintTop_toBottomOf="@+id/et_occupation"
            tools:ignore="MissingConstraints"></TextView>

        <EditText
            android:id="@+id/et_professional_interests"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/it"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/et_hobbies"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <!--        additional input boxes for professional interests-->
        <EditText
            android:id="@+id/et_professional_interests1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/it"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/et_hobbies"
            app:layout_constraintTop_toBottomOf="@+id/et_professional_interests"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_professional_interests2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/it"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/et_hobbies"
            app:layout_constraintTop_toBottomOf="@+id/et_professional_interests1"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/et_professional_interests3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/it"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/et_hobbies"
            app:layout_constraintTop_toBottomOf="@+id/et_professional_interests2"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_professional_interests4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/it"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/et_hobbies"
            app:layout_constraintTop_toBottomOf="@+id/et_professional_interests3"
            android:visibility="gone" />
        <!--        additional input boxes end here-->

        <Button
            android:id="@+id/button_add_professional_interests"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:text="@string/pl"
            app:layout_constraintBottom_toBottomOf="@+id/et_professional_interests"
            app:layout_constraintEnd_toEndOf="@+id/et_occupation"
            app:layout_constraintTop_toTopOf="@+id/et_professional_interests"
            tools:ignore="MissingConstraints" />


        <!-- hobbies -->
        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hb"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/et_occupation"
            app:layout_constraintTop_toBottomOf="@+id/et_professional_interests4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_hobbies"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/m5"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <!--        additional input boxes for hobbies -->
        <EditText
            android:id="@+id/et_hobbies1"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/m5"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/et_hobbies"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_hobbies2"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/m5"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/et_hobbies1"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_hobbies3"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/m5"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/et_hobbies2"
            android:visibility="gone" />

        <EditText
            android:id="@+id/et_hobbies4"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:hint="@string/m5"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/et_hobbies3"
            android:visibility="gone" />

        <!--        button to add hobbies-->
        <Button
            android:id="@+id/button_add_hobbies"
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:text="@string/pl"
            app:layout_constraintBottom_toBottomOf="@+id/et_hobbies"
            app:layout_constraintEnd_toEndOf="@+id/et_occupation"
            app:layout_constraintTop_toTopOf="@+id/et_hobbies"
            tools:ignore="MissingConstraints" />


        <!-- recent activities  -->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/ra"
            android:textSize="25sp"
            app:layout_constraintStart_toStartOf="@+id/et_professional_interests"
            app:layout_constraintTop_toBottomOf="@+id/et_hobbies4"
            tools:ignore="MissingConstraints" />

        <EditText
            android:id="@+id/et_recent_activities"
            android:layout_width="300dp"
            android:layout_height="150dp"
            android:hint="@string/wr"
            android:inputType="text"
            app:layout_constraintStart_toStartOf="@+id/et_professional_interests"
            app:layout_constraintTop_toBottomOf="@+id/textView4"
            tools:ignore="MissingConstraints" />

        <!-- submit button  -->
        <Button
            android:id="@+id/button_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:text="@string/sb"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_recent_activities"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
